# Painepartneri

./: .gitignore  README.md  package-lock.json  pyproject.toml
root/backend/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
root/backend/app/: __init__.py  app.py  db.py  schemas.py  users.py
root/backend/app/routers/: auth.py  fhir.py  measurements.py  otp.py
root/backend/tests/: conftest.py  test_e2e.py  test_register_errors.py
root/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  test.json  vite.config.ts
root/frontend/src/: App.tsx  DbAdmin.tsx  Download.tsx  Features.tsx  GoogleLogin.tsx  Hero.tsx  History.tsx  LineChart.tsx  Login.tsx  Navbar.tsx  NewMeasurement.tsx  OauthCallback.tsx  OtpForm.tsx  Profile.tsx  ProtectedRoute.tsx  Register.tsx  RegisterForm.tsx  api.ts
