[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["olrut <121128961+olrut@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
motor = "^3.6.0"
config = "^0.5.1"
requests = "^2.32.3"
pyjwt = "^2.9.0"
beanie = "^1.27.0"
fastapi-users = {extras = ["beanie"], version = "^14.0.0"}
httpx-oauth = "^0.15.1"
sendgrid = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
